# kramli-cli

./: .deepsource.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.cursor/rules/: no-cursor-coauthor.mdc
.githooks/: commit-msg  prepare-commit-msg
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
locales/ar/: main.ftl
locales/de/: main.ftl
locales/en/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/it/: main.ftl
locales/ja/: main.ftl
locales/ko/: main.ftl
locales/nl/: main.ftl
locales/pl/: main.ftl
locales/pt/: main.ftl
locales/ru/: main.ftl
locales/tr/: main.ftl
locales/uk/: main.ftl
locales/zh/: main.ftl
scripts/: apple-codesign-binary.sh  notarize-macos-artifacts.sh  patch-all-dist-manifest-checksums.sh  patch-dist-manifest-checksums.py  patch-installer-ps1-checksums.py  release_checksums.py  set_release_version.py  verify-release-artifacts.py
src/: api.rs  attachments.rs  cli.rs  config.rs  i18n.rs  internal_links.rs  main.rs  mcp.rs  models.rs  note.rs  output.rs  telemetry.rs  test_env.rs  tui.rs
src/cli/: list_commands.rs
